apps/cluster1/karma/karma/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: karma
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - karma.home.wugi.info
    secretName: karma-ingress-certs
  rules:
  - host: karma.home.wugi.info
    http:
      paths:
      - path: /
        pathType: ImplementationSpecific
        backend:
          service:
            name: karma
            port:
              number: 80
